--- a/Develop/Horiseon_Social_Solution_Services.html
+++ b/Develop/Horiseon_Social_Solution_Services.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Social Solution Services, Inc.</title>
+    <!--Descriptive Title. html file name also has been changed from index.html to Horiseon_Social_Solution_Services.html-->
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
@@ -24,61 +25,66 @@
             </ul>
         </nav>
     </header>
-    <!--Since class="hero's background img is part of css, instead of using alt, title was being used.
+
+    <main>
+        <!--Since class="hero's background img is part of css, instead of using alt, title was being used.
         User can hover the mouse over the background img, and whether img is available or not, user will be able to 
         see the img's title descrbing the img"-->
-    <figure class="hero" title="digital-marketing-meeting"></figure>
-    <section class="content">
-        <article class="content_article">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="search-engine-optimization-image"/>
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </article>
-        <article class="content_article">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="online-reputation-management-image" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </article>
-        <article class="content_article">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social-media-marketing-image"/>
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </article>
-        <!--Removed id="online-reputation-management" and "social-media-marketing" since their ids were not used in css
-        If each of the contents need to be styled in the future, ids can be added, but for now, articles has same style
-        and unified as class="content-article" and each of their unique id is not neccesary.-->
-    </section>
-    <aside class="benefits">
-        <article class="aside_benefits">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="lead-generation-icon"/>
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </article>
-        <article class="aside_benefits">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="brand-awareness-icon"/>
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </article>
-        <article class="aside_benefits">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="cost-management-icon"/>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </article>
-    </aside>
+        <figure class="hero" title="digital-marketing-meeting"></figure>
+        <section class="content">
+            <article class="content_article">
+                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="search-engine-optimization-image"/>
+                <h2>Search Engine Optimization</h2>
+                <p>
+                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                </p>
+            </article>
+            <article class="content_article">
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="online-reputation-management-image" />
+                <h2>Online Reputation Management</h2>
+                <p>
+                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                </p>
+            </article>
+            <article class="content_article">
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social-media-marketing-image"/>
+                <h2>Social Media Marketing</h2>
+                <p>
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                </p>
+            </article>
+            <!--Removed id="online-reputation-management" and id="social-media-marketing" since their ids are not in use in style.css.
+            If each of the contents needs to be styled in the future, ids can be added, but for now, they all have same style
+            and unified as class="content-article" and each of their unique id is not neccesary.-->
+        </section>
+        <aside class="benefits">
+            <section class="benefits_aside">
+                <h3>Lead Generation</h3>
+                <img src="./assets/images/lead-generation.png" alt="lead-generation-icon"/>
+                <p>
+                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                </p>
+            </section>
+            <section class="benefits_aside">
+                <h3>Brand Awareness</h3>
+                <img src="./assets/images/brand-awareness.png" alt="brand-awareness-icon"/>
+                <p>
+                    Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                </p>
+            </section>
+            <section class="benefits_aside">
+                <h3>Cost Management</h3>
+                <img src="./assets/images/cost-management.png" alt="cost-management-icon"/>
+                <p>
+                    As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                </p>
+            </section>
+        </aside>
+    </main>
+
     <footer>
-        <!--<h2>Made with ❤️️ by Horiseon</h2>// heading attributes in sequential order h1->h2->h3->h4.
+        <!--<h2>Made with ❤️️ by Horiseon</h2>
+        Heading attributes should be in sequential order h1->h2->h3->h4.
         Since footer is positioned in last, h4 comes after h3-->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
