--- a/Develop/Horiseon_Social_Solution_Services.html
+++ b/Develop/Horiseon_Social_Solution_Services.html
@@ -28,8 +28,8 @@
 
     <main>
         <!--Since class="hero's background img is part of css, instead of using alt, title was being used.
-        User can hover the mouse over the background img, and whether img is available or not, user will be able to 
-        see the img's title descrbing the img"-->
+        User can hover the mouse over the background image, and whether img file is available or not, user will be able to 
+        see the description of the image"-->
         <figure class="hero" title="digital-marketing-meeting"></figure>
         <section class="content">
             <article class="content_article">
@@ -54,8 +54,8 @@
                 </p>
             </article>
             <!--Removed id="online-reputation-management" and id="social-media-marketing" since their ids are not in use in style.css.
-            If each of the contents needs to be styled in the future, ids can be added, but for now, they all have same style
-            and unified as class="content-article" and each of their unique id is not neccesary.-->
+            If each of the contents needs to be individually styled in the future, ids can be added, but for now, they all have same style,
+            thus, unified as class="content-article" and having each of their unique id is not neccesary.-->
         </section>
         <aside class="benefits">
             <section class="benefits_aside">
