--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Social Solution Services, Inc.</title>
-    <!--Descriptive Title. html file name also has been changed from index.html to Horiseon_Social_Solution_Services.html-->
+    <!--Descriptive Title-->
 </head>
 
 <body>
